GO-T326 table overflow fixed

--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -5,6 +5,11 @@
   display: block;
 }
 
+.fs-list-container {
+  width: 100%;
+  overflow: auto;
+}
+
 .fs-list-table {
   display: table;
   width: 100%;
